--- a/CustomizationEditor_10.2.700.X/CustomizationEditor_10.2.700.X.csproj
+++ b/CustomizationEditor_10.2.700.X/CustomizationEditor_10.2.700.X.csproj
@@ -4,22 +4,22 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7CC05C03-06EC-45E1-80F5-DAAF797FF13D}</ProjectGuid>
+    <ProjectGuid>{C856CA59-99D2-4F25-8578-CE94D4A4A566}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CustomizationEditor</RootNamespace>
-    <AssemblyName>CustomizationEditor</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <RootNamespace>CustomizationEditor_10._2._700.X</RootNamespace>
+    <AssemblyName>CustomizationEditor_10.2.700.X</AssemblyName>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\Epicor\MEI102300\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;EPICOR_10_2_300</DefineConstants>
+    <OutputPath>..\..\..\..\..\Epicor\MEI102700\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;EPICOR_10_2_700</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -27,13 +27,13 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\BuiltPackages\10.2.300\</OutputPath>
-    <DefineConstants>TRACE;EPICOR_10_2_300</DefineConstants>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Resources\logoraw_notext_fw_Twv_icon.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\logoraw_notext_fw_twv_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommandLine, Version=2.2.0.0, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
@@ -41,80 +41,80 @@
     </Reference>
     <Reference Include="Epicor, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Epicor.exe</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Epicor.exe</HintPath>
       <Aliases>epi</Aliases>
       <Private>False</Private>
     </Reference>
     <Reference Include="Epicor.ServiceModel">
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Epicor.ServiceModel.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Epicor.ServiceModel.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Ice.Adapters.DashboardMaint, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.Adapters.DashboardMaint.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.Adapters.DashboardMaint.dll</HintPath>
     </Reference>
     <Reference Include="Ice.Adapters.GenXData, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.Adapters.GenXData.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.Adapters.GenXData.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Ice.Adapters.Menu, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.Adapters.Menu.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.Adapters.Menu.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Ice.Contracts.BO.DashboardMaint, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.Contracts.BO.DashboardMaint.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.Contracts.BO.DashboardMaint.dll</HintPath>
     </Reference>
     <Reference Include="Ice.Contracts.BO.GenXData, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.Contracts.BO.GenXData.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.Contracts.BO.GenXData.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Ice.Contracts.BO.Menu, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.Contracts.BO.Menu.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.Contracts.BO.Menu.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Ice.Core.Session, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.Core.Session.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.Core.Session.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Ice.Lib.Deployment, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.Lib.Deployment.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.Lib.Deployment.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Ice.Lib.EpiClientLib, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.Lib.EpiClientLib.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.Lib.EpiClientLib.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Ice.Lib.EpiReportLib, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.Lib.EpiReportLib.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.Lib.EpiReportLib.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Ice.Lib.Startup, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.Lib.Startup.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.Lib.Startup.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Ice.UI.CustomizationMaintEntry, Version=3.2.300.0, Culture=neutral, PublicKeyToken=5d3fa3c7105d7992, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Ice.UI.CustomizationMaintEntry.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Ice.UI.CustomizationMaintEntry.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Infragistics4.Win.UltraWinDock.v12.2, Version=12.2.20122.2018, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Infragistics4.Win.UltraWinDock.v12.2.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Infragistics4.Win.UltraWinDock.v12.2.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Infragistics4.Win.UltraWinToolbars.v12.2, Version=12.2.20122.2018, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Infragistics4.Win.UltraWinToolbars.v12.2.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Infragistics4.Win.UltraWinToolbars.v12.2.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Infragistics4.Win.v12.2, Version=12.2.20122.2018, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb">
@@ -122,7 +122,7 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST\Client\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\epicor\ERP10.2ClientTEST2\Client\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
@@ -184,6 +184,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="NonModalWokIt.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -191,27 +201,20 @@
       <DependentUpon>NonModalWokIt.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resource.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resource.resx</DependentUpon>
-    </Compile>
+    <Compile Include="Resource.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="packages.config" />
+    <None Include="Resources\BasicProjc.csproj" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="NonModalWokIt.resx">
       <DependentUpon>NonModalWokIt.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Resource.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="Resources\BasicProjc.csproj" />
+    <EmbeddedResource Include="Resource.resx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CommonClasses\CommonClasses.csproj">
@@ -224,12 +227,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\logoraw_notext_fw_Twv_icon.ico" />
+    <None Include="Resources\logoraw_notext_fw_twv_icon.ico" />
   </ItemGroup>
   <Import Project="..\CommonCode\CommonCode.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>del $(TargetDir)..\Zips\CustomizationHelper.10.2.300.X.zip
-powershell.exe -command "&amp; { Add-Type -A 'System.IO.Compression.FileSystem'; [IO.Compression.ZipFile]::CreateFromDirectory('$(TargetDir)', '$(TargetDir)..\Zips\CustomizationHelper.10.2.300.X.zip'); }"</PostBuildEvent>
+    <PostBuildEvent>del $(TargetDir)..\Zips\CustomizationHelper.10.2.700.X.zip
+powershell.exe -command "&amp; { Add-Type -A 'System.IO.Compression.FileSystem'; [IO.Compression.ZipFile]::CreateFromDirectory('$(TargetDir)', '$(TargetDir)..\Zips\CustomizationHelper.10.2.700.X.zip'); }"</PostBuildEvent>
   </PropertyGroup>
 </Project>
